# advent2025

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
python/: day01.py  day02.py  day03.py  day04.py  puzzle_input_getter.py  pyproject.toml
