[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Advent of Code 2025 Python solutions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["requests>=2.32.3"]

[project.optional-dependencies]
dev = [
    "pyrefly>=0.44.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
line-length = 120

[tool.pyrefly]
